add button for start game in phone

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1 id="level-title">Press on Y key start play</h1>
     <div class="container">
+        
+    <div type="button" id="white" class="btn_restar white">
+    </div>
+        
     <div class="row">
         <div type="button" id="green" class="btn green">
 
